Renamed main.js to render.js

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="./Resources/TempResources.js"></script>
-	<script defer src="./main.js"></script>
+	<script defer src="./render.js"></script>
 	<link rel="stylesheet" type="text/css" href="./style.css">
 	<link rel="icon" type="image/png" href="./Assets/favicon.png">
 	<title>ResM</title>
