--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<script src="./Resources/TempResources.js"></script>
 	<script defer src="./render.js"></script>
 	<link rel="stylesheet" type="text/css" href="./style.css">
-	<link rel="icon" type="image/png" href="./Assets/favicon.png">
+	<link rel="icon" href="./Assets/favicon.ico">
 	<title>ResM</title>
 </head>
 
