--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
 <body>
 	<div id="main">
-		<input type="text" id="search" oninput="searchQ()" autofocus>
+		<div id="search-wrapper">
+			<input type="text" id="search" oninput="searchQ()" autofocus>
+			<button id="add-btn"><img src="./Assets/add.svg" alt="add button"></button>
+		</div>
 		<div id="results">
 		</div>
 	</div>
