--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 	<div id="main">
 		<div id="search-wrapper">
 			<input type="text" id="search" oninput="searchQ()" autofocus>
-			<button id="add-btn"><img src="./Assets/add.svg" alt="add button"></button>
+			<!-- <form method="GET" action="./Add/add.html"> -->
+				<button id="add-btn" onclick="window.location.href = './Add/add.html'"><img src="./Assets/add.svg" alt="add button"></button>
+			<!-- </form> -->
 		</div>
 		<div id="results">
 		</div>
