--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script defer src="./render.js"></script>
 	<link rel="stylesheet" type="text/css" href="./style.css">
-	<link rel="icon" href="./Assets/favicon.ico">
+	<link rel="icon" href="/Assets/favicon.ico">
 	<title>ResM</title>
 </head>
 
@@ -14,9 +14,7 @@
 	<div id="main">
 		<div id="search-wrapper">
 			<input type="text" id="search" oninput="searchQ()" autofocus>
-			<!-- <form method="GET" action="./Add/add.html"> -->
-				<button id="add-btn" onclick="window.location.href = './Add/add.html'"><img src="./Assets/add.svg" alt="add button"></button>
-			<!-- </form> -->
+			<button id="add-btn" onclick="window.location.href = '/Add/add.html'"><img src="/Assets/add.svg" alt="add button"></button>
 		</div>
 		<div id="results">
 		</div>
