Added search features

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -13,7 +13,7 @@
 <body>
 	<div id="main">
 		<div id="search-wrapper">
-			<input type="text" id="search" oninput="searchQ()" autofocus>
+			<input type="text" id="search" oninput="processInp()" autofocus>
 			<button id="add-btn" onclick="window.location.href = '/Add/add.html'"><img src="/Assets/add.svg" alt="add button"></button>
 		</div>
 		<div id="results">
