--- a/Frontend/Add/add.html
+++ b/Frontend/Add/add.html
@@ -36,7 +36,7 @@
 					<datalist id="projects">
 					</datalist>
 
-					<input class="form-btn" type="button" value="✔" onclick="addNew()">
+					<input class="form-btn" type="button" value="✔" onclick="sendToServer('POST')">
 					<input class="form-btn" type="button" value="✖" onclick="cancel()">
 				</div>
 			</div>
