--- a/Frontend/Ancillary/add.html
+++ b/Frontend/Ancillary/add.html
@@ -36,8 +36,8 @@
 					<datalist id="projects">
 					</datalist>
 
-					<input class="form-btn" title='Save' type="button" value="✔" onclick="sendToServer('POST')">
-					<input class="form-btn" title='Cancel' type="button" value="✖" onclick="cancel()">
+					<input class="form-btn" title="Save" type="button" value="✔" onclick="sendToServer('POST')">
+					<input class="form-btn" title="Cancel" type="button" value="✖" onclick="cancel()">
 				</div>
 			</div>
 		</div>
