Changed save and cancel buttons

--- a/Frontend/Ancillary/add.html
+++ b/Frontend/Ancillary/add.html
@@ -36,8 +36,8 @@
 					<datalist id="projects">
 					</datalist>
 
-					<input class="form-btn" title="Save" type="button" value="✔" onclick="sendToServer('POST')">
-					<input class="form-btn" title="Cancel" type="button" value="✖" onclick="cancel()">
+					<button class="form-btn" title="Save" onclick="sendToServer('POST')"><img src="/Assets/save.svg" alt="save button"></button>
+					<button class="form-btn" title="Cancel" onclick="cancel()"><img src="/Assets/cancel.svg" alt="cancel button"></button>
 				</div>
 			</div>
 		</div>
