--- a/Frontend/Ancillary/add.html
+++ b/Frontend/Ancillary/add.html
@@ -36,7 +36,7 @@
 					<datalist id="projects">
 					</datalist>
 
-					<button class="form-btn" title="Save" onclick="sendToServer('POST')"><img src="/Assets/save.svg" alt="save button"></button>
+					<button class="form-btn" title="Save" onclick="STSWrapper('POST')"><img src="/Assets/save.svg" alt="save button"></button>
 					<button class="form-btn" title="Cancel" onclick="cancel()"><img src="/Assets/cancel.svg" alt="cancel button"></button>
 				</div>
 			</div>
