--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -14,9 +14,11 @@
 	<div id="main">
 		<div id="search-wrapper">
 			<input type="text" id="search" oninput="processInp()" autofocus>
-			<button id="add-btn" title="Add New" onclick="window.location.href = '/Ancillary/add.html'"><img src="/Assets/add.svg" alt="add button"></button>
+			<button id="add-btn" title="Add New" onclick="dispOptions()"><img src="/Assets/add.svg" alt="add button"></button>
 		</div>
-		<div id="results">
+		<div id="menu" style="height: 0px;">
+		</div>
+		<div id="results" style="position: absolute; top: 67px;">
 		</div>
 	</div>
 </body>
