asset location and removed icon

--- a/Frontend/Ancillary/addpro.html
+++ b/Frontend/Ancillary/addpro.html
@@ -6,7 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script defer src="./add2.js"></script>
 	<link rel="stylesheet" href="./add2.css">
-	<link rel="icon" href="/Assets/favicon.ico">
 	<title>Add Project Tag</title>
 </head>
 
@@ -20,8 +19,8 @@
 				<input type="text" class="add" id="link" maxlength="300" placeholder="Link (300 Characters Only)">
 
 				<div id="bottom">
-					<button class="form-btn" title="Save" onclick="sendProToServer('POST')"><img src="/Assets/save.svg" alt="save button"></button>
-					<button class="form-btn" title="Cancel" onclick="cancel()"><img src="/Assets/cancel.svg" alt="cancel button"></button>
+					<button class="form-btn" title="Save" onclick="sendProToServer('POST')"><img src="../../Assets/save.svg" alt="save button"></button>
+					<button class="form-btn" title="Cancel" onclick="cancel()"><img src="../../Assets/cancel.svg" alt="cancel button"></button>
 				</div>
 			</div>
 		</div>
