--- a/Frontend/Ancillary/add.html
+++ b/Frontend/Ancillary/add.html
@@ -6,7 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script defer src="./add.js"></script>
 	<link rel="stylesheet" href="./add.css">
-	<link rel="icon" href="/Assets/favicon.ico">
 	<title>Add</title>
 </head>
 
@@ -36,8 +35,8 @@
 					<datalist id="projects">
 					</datalist>
 
-					<button class="form-btn" title="Save" onclick="STSWrapper('POST')"><img src="/Assets/save.svg" alt="save button"></button>
-					<button class="form-btn" title="Cancel" onclick="cancel()"><img src="/Assets/cancel.svg" alt="cancel button"></button>
+					<button class="form-btn" title="Save" onclick="STSWrapper('POST')"><img src="../../Assets/save.svg" alt="save button"></button>
+					<button class="form-btn" title="Cancel" onclick="cancel()"><img src="../../Assets/cancel.svg" alt="cancel button"></button>
 				</div>
 			</div>
 		</div>
