--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -6,7 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script defer src="./render.js"></script>
 	<link rel="stylesheet" type="text/css" href="./style.css">
-	<link rel="icon" href="/Assets/favicon.ico">
 	<title>ResM</title>
 </head>
 
@@ -14,7 +13,7 @@
 	<div id="main">
 		<div id="search-wrapper">
 			<input type="text" id="search" oninput="processInp()" autofocus>
-			<button id="add-btn" title="Add New" onclick="dispOptions()"><img src="/Assets/add.svg" alt="add button"></button>
+			<button id="add-btn" title="Add New" onclick="dispOptions()"><img src="../Assets/add.svg" alt="add button"></button>
 		</div>
 		<div id="menu" style="height: 0px;">
 		</div>
